--- a/references.bib
+++ b/references.bib
@@ -2107,3 +2107,18 @@ PMCID: PMC1088996}
 	doi = {10.1016/j.healthpol.2008.11.013},
 	url = {https://www.sciencedirect.com/science/article/pii/S0168851008002789}
 }
+
+@article{golding2014,
+	title = {Migration and Inequality in the Rural United States: Connecting Urban to Rural and Local to Global},
+	author = {Golding, Shaun A.},
+	year = {2014},
+	date = {2014},
+	journal = {Sociology Compass},
+	pages = {324--335},
+	volume = {8},
+	number = {3},
+	doi = {10.1111/soc4.12133},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/soc4.12133},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/soc4.12133},
+	langid = {en}
+}
